assignments/pa3/testsuite/cgen/out/new-st.cl.spim.err
spim: (parser) syntax error on line 223 of file /home/raj/cool/distro/assignments/pa3/testsuite/cgen/out/new-st.cl.out
	  .word	-1
	  ^
Instruction references undefined symbol at 0x0040129c
